--- a/package.json
+++ b/package.json
@@ -1,4 +1,24 @@
 {
+  "name": "module18-social-network-api",
+  "version": "1.0.0",
+  "description": "This is a social network API back-end application that allows the user to share their thoughts, react to friends' thoughts, and create a friend list. The application's data is stored using a MongoDB database.",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "seed": "node utils/seed"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tbgolfer86/Social-Network-API.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/tbgolfer86/Social-Network-API/issues"
+  },
+  "homepage": "https://github.com/tbgolfer86/Social-Network-API#readme",
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^6.9.2"
